gcc/testsuite/rust/rustc/ui/conditional-compilation/cfg-attr-invalid-predicate.rs
#[cfg(foo(bar))] // { dg-error ".E0537." "" { target *-*-* } }
fn check() {}

fn main() {}

